# img.ly-test

./: CMakeLists.txt  README.md  main.cpp
src/: ComputePipeline.cpp  ComputePipeline.h
src/actions/: ActionResult.h  DataDecompressor.h  ImageDecoding.h  JsonUnserializer.h
src/actions/Load/: BundleLoad.h  FileLoad.h  LoadFactory.h  UrlLoad.h
src/utils/: Option.h
